Huge changes and resizability fixes

--- a/src/index.html
+++ b/src/index.html
@@ -106,25 +106,26 @@
             
         	<!-- Begin text carousel intro section -->
 			<section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5">
-
 				<!-- <div class="gradient"></div> -->
-                <img class="background-video" src="img/etf_big.png" style="z-index: 1;">
 				<div class="container">
                     <div class="row">
-                        <div class="col-md-7" style="z-index: 2;">
+                        <div class="col-md-7">
+                            <div class="rotate-box-info">
+                                <img src="img/etf_big.png" class="intro-image">
+                            </div>
                             <div class="inner-text">
-                                <div style="margin-top:10%">
-                                    <h1>WELCOME ABOARD</h1>
-                                    <h2>the first synthetic, deflationary DeFi mutual fund</h2>
-                                </div> 
+                                <h1>WELCOME <br>ABOARD</h1>
+                                <h2>the first synthetic, deflationary DeFi mutual fund</h2>
                                 <a class="btn btn-blank" target="_blank" role="button">About</a>
                                 <a class="btn btn-blue" target="_blank" role="button">Unlock Wallet</a>
                             </div>
                         </div>
-                        <div class="col-md-3">
 
+                        <div class="col-md-5">
+                            <div class="rotate-box-info">
+                                <img src="img/etf_big.png" class="intro-image">
+                            </div>
                         </div>
-                        <div class="col-md-2"></div>
 
                     </div>
                     
@@ -151,8 +152,8 @@
                             <div class="col-md-1"></div>
                             <div class="col-md-4">
                                 <div class="rotate-box-info">
-                                    <h2 style="font-size: 66px; font-weight:bold;">Synthetic Mutual Fund</h2>
-                                    <p style="font-size:x-large;">Our token is backed by a carefully selected collection of blue-chip cryptocurrencies.</p>
+                                    <h2 class="about-h2">Synthetic Mutual Fund</h2>
+                                    <p class="about-p">Our token is backed by a carefully selected collection of blue-chip cryptocurrencies.</p>
                                     <a class="btn btn-blue" target="_blank" role="button">Learn more</a>
                                 </div>
                             </div>
@@ -179,8 +180,8 @@
                                 <div class="col-md-2"></div>
                                 <div class="col-md-4">
                                     <div class="rotate-box-info">
-                                        <h2 style="font-size:66px; font-weight:bold;">Do better than the market.</h2>
-                                        <p style="font-size:x-large;">Our protocol exposes you to a variety of the top-tier tokens that are set to do better than most.</p>
+                                        <h2 class="about-h2">Do better than the market.</h2>
+                                        <p class="about-p">Our protocol exposes you to a variety of the top-tier tokens that are set to do better than most.</p>
                                         <a class="btn btn-blue" target="_blank" role="button">Learn more</a>
                                     </div>
                                     <div class="rotate-box-info">
@@ -194,8 +195,8 @@
                             <div class="col-md-1"></div>
                             <div class="col-md-4">
                                 <div class="rotate-box-info">
-                                    <h2 style="font-size: 66px; font-weight:bold;">Maximal safety, Minimal risk</h2>
-                                    <p style="font-size:x-large;">Built-in diversification, decentralized governance, and deflationary mechanisms keep your assets value secure.</p>
+                                    <h2 class="about-h2">Maximal safety, Minimal risk</h2>
+                                    <p class="about-p">Built-in diversification, decentralized governance, and deflationary mechanisms keep your assets value secure.</p>
                                     <a class="btn btn-blue" target="_blank" role="button">Learn more</a>
                                 </div>
                             </div>
@@ -218,8 +219,8 @@
                             <div class="col-md-2"></div>
                             <div class="col-md-4">
                                 <div class="rotate-box-info">
-                                    <h2 style="font-size:66px; font-weight:bold;">Reserve Vault & Burns</h2>
-                                    <p style="font-size:x-large;">We utilise a reserve vault of tokens that can be altered in supply to affect the $VSL price to match the mutual fund.</p>
+                                    <h2 class="about-h2">Reserve Vault & Burns</h2>
+                                    <p class="about-p"">We utilise a reserve vault of tokens that can be altered in supply to affect the $VSL price to match the mutual fund.</p>
                                     <a class="btn btn-blue" target="_blank" role="button">Learn more</a>
                                 </div>
                                 <div class="rotate-box-info">
